# Arkanoid_game

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  for_testing.cpp  main  main.cpp
src/hederfiles/: Background.hpp  Ball.hpp  BlockParser.hpp  Brick.hpp  BrickSetter.hpp  BrickTextures.hpp  BrickType.hpp  Command.hpp  ConditionChecker.hpp  ContainerHandler.hpp  ControlSettings.hpp  ControlSettingsMenu.hpp  CreateLevel.hpp  ExitOption.hpp  FileReader.hpp  GameLoop.hpp  GameLoop.hxx  GameResetter.hpp  GameResetter.hxx  GameState.hpp  GameStateUpdater.hpp  GameStateUpdater.hxx  GameStateUpdaterImpl.hpp  HighScoreManager.hpp  HighScoreOption.hpp  Hud.hpp  InitObjects.hpp  InputHandler.hpp  InputHandler.hxx  KeyboardControlHandler.hpp  Lexer.hpp  LinesPointer.hpp  MapException.hpp  Menu.hpp  MenuOption.hxx  MenuScreenHandler.hpp  MouseButton.hpp  Paddle.hpp  PaddleArrowsHandnling.hpp  Parser.hpp  (+17 more)
src/hederfiles/Commands/: BreakCommand.hpp  CommandFactory.hpp  IfCommand.hpp  InitObjectsCommand.hpp  LevelCommand.hpp  PrintCommand.hpp  SleepCommand.hpp  VerCommand.hpp  WhileCommand.hpp
src/hederfiles/Difficulty/: Difficulty.hpp  EasyOption.hpp  HardOption.hpp  MediumOption.hpp
src/hederfiles/InputLogic/: InputHandlerImpl.hpp  MouseButton.hpp  PaddleArrowsHandnling.hpp  WindowArrowsKey.hpp
src/hederfiles/Interfaces/: Circle.hxx  Command.hxx  ControlTypeHandler.hxx  GameLoop.hxx  GameResetter.hxx  GameStateUpdater.hxx  InputHandler.hxx  MenuOption.hxx  Parser.hxx  Rectangle.hxx  Renderer.hxx  Shape.hxx
src/hederfiles/Menu/: ExitOption.hpp  HighScoreOption.hpp  Menu.hpp  OptionsOption.hpp  PlayOption.hpp
src/hederfiles/Options/: ControlsOption.hpp  DifficultyOption.hpp  InstructionsOption.hpp  Options.hpp  SoundOption.hpp  VideoOption.hpp
src/hederfiles/Parser/: BlockParser.hpp  IfBlockParser.hpp  LinesBlockParser.hpp  Parse.hpp  WhileBlockParser.hpp
src/hederfiles/PlayerInteractivObjects/: Ball.hpp  Border.hpp  Brick.hpp  Paddle.hpp
src/hederfiles/ScoreLogic/: HighScoreManager.hpp  Points.hpp
src/hederfiles/Video/: FullScreen.hpp  ResX1024.hpp  ResX800.hpp  Video.hpp
src/sourcefiles/: Background.cpp  BlockParser.cpp  Brick.cpp  BrickSetter.cpp  BrickTextures.cpp  CheckCondition.cpp  Command.cpp  ConditionChecker.cpp  ContainerHandler.cpp  ControlSettings.cpp  ControlSettingsMenu.cpp  CreateLevel.cpp  ExitOption.cpp  FileReader.cpp  GameLoop.cpp  GameResetter.cpp  GameState.cpp  GameStateUpdater.cpp  HighScoreManager.cpp  HighScoreOption.cpp  Hud.cpp  InitObjects.cpp  InputHandler.cpp  KeyboardControlHandler.cpp  Lexer.cpp  LinesPointer.cpp  MapException.cpp  Menu.cpp  MenuScreenHandler.cpp  MouseButton.cpp  Paddle.cpp  PaddleArrowsHandnling.cpp  Parser_1.cpp  PhysicsManager.cpp  PlayOption.cpp  Points.cpp  Renderer.cpp  Resoloution.cpp  SoundManager.cpp  StateChanger.cpp  (+7 more)
src/sourcefiles/Commands/: BreakCommand.cpp  CommandFactory.cpp  IfCommand.cpp  InitObjectsCommand.cpp  LevelCommand.cpp  PrintCommand.cpp  SleepCommand.cpp  VerCommand.cpp  WhileCommand.cpp
src/sourcefiles/Difficulty/: Difficulty.cpp  EasyOption.cpp  HardOption.cpp  MediumOption.cpp
src/sourcefiles/InputLogic/: InputHandlerImpl.cpp  MouseButton.cpp  PaddleArrowsHandnling.cpp  WindowArrowsKey.cpp
src/sourcefiles/Menu/: ExitOption.cpp  HighScoreOption.cpp  Menu.cpp  OptionsOption.cpp  PlayOption.cpp
src/sourcefiles/Options/: ControlsOption.cpp  DifficultyOption.cpp  InstructionsOption.cpp  Options.cpp  SoundOption.cpp  VideoOption.cpp
src/sourcefiles/Parser/: BlockParser.cpp  IfBlockParser.cpp  LinesBlockParser.cpp  Parse.cpp  WhileBlockParser.cpp
src/sourcefiles/PlayerInteractivObjects/: Ball.cpp  Border.cpp  Brick.cpp  Paddle.cpp
src/sourcefiles/ScoreLogic/: HighScoreManager.cpp  Points.cpp
src/sourcefiles/Video/: FullScreen.cpp  ResX1024.cpp  ResX800.cpp  Video.cpp
src/sourcefiles/testing/: CheckCondition.cpp  Command.cpp  CommandDefinition.cpp  Lexer.cpp  Parser.cpp  SymbolVar.cpp  WhileLoop.cpp  ifCondition.cpp
