cmake_minimum_required(VERSION 3.12)
project(main)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -O2 -Wextra")

# Set the directories for source and header files
set(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
set(SRC_DIR_MAIN ${CMAKE_CURRENT_SOURCE_DIR})

set(HEADER_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src/hederfiles)
set(HEADER_DIR_COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/src/hederfiles/Commands)
set(HEADER_DIR_PARSER ${CMAKE_CURRENT_SOURCE_DIR}/src/hederfiles/Parser)
set(HEADER_DIR_INTERFACES ${CMAKE_CURRENT_SOURCE_DIR}/src/hederfiles/Interfaces)
set(HEADER_DIR_INPUT_LOGIC ${CMAKE_CURRENT_SOURCE_DIR}/src/hederfiles/InputLogic)
set(HEADER_DIR_MENU ${CMAKE_CURRENT_SOURCE_DIR}/src/hederfiles/Menu)
set(HEADER_DIR_PLAYER_INTERACTIV_OBJ ${CMAKE_CURRENT_SOURCE_DIR}/src/hederfiles/PlayerInteractivObjects)
set(HEADER_DIR_SCORE_LOGIC ${CMAKE_CURRENT_SOURCE_DIR}/src/hederfiles/ScoreLogic)
set(HEADER_DIR_OPTIONS ${CMAKE_CURRENT_SOURCE_DIR}/src/hederfiles/Options)
set(HEADER_DIR_DIFFICULTY ${CMAKE_CURRENT_SOURCE_DIR}/src/hederfiles/Difficulty)
set(HEADER_DIR_VIDEO ${CMAKE_CURRENT_SOURCE_DIR}/src/hederfiles/Video)
set(HEADER_DIR_MAIN ${CMAKE_CURRENT_SOURCE_DIR})

# set(BUILD_DIR ${CMAKE_CURRENT_SOURCE_DIR}/bin)

file(GLOB_RECURSE SOURCE ${SRC_DIR}/*.cpp)
file(GLOB_RECURSE MAIN ${SRC_DIR_MAIN}/main.cpp)

file(GLOB_RECURSE HEADER ${HEADER_DIR}/*.hpp)
file(GLOB_RECURSE HEADER_COMMAND ${HEADER_DIR_COMMAND}/*.hpp)
file(GLOB_RECURSE HEADER_PARSER ${HEADER_DIR_PARSER}/*.hpp)
file(GLOB_RECURSE HEADER_INTERFACES ${HEADER_DIR_INTERFACES}/*.hxx)
file(GLOB_RECURSE HEADER_INPUT_LOGIC ${HEADER_DIR_INPUT_LOGIC}/*.hpp)
file(GLOB_RECURSE HEADER_MENU ${HEADER_DIR_MENU}/*.hpp)
file(GLOB_RECURSE HEADER_PLAYER_INTERACTIV_OBJ ${HEADER_DIR_PLAYER_INTERACTIV_OBJ}/*.hpp)
file(GLOB_RECURSE HEADER_SCORE_LOGIC ${HEADER_DIR_SCORE_LOGIC}/*.hpp)
file(GLOB_RECURSE HEADER_OPTIONS ${HEADER_DIR_OPTIONS}/*.hpp)
file(GLOB_RECURSE HEADER_DIFFICULTY ${HEADER_DIR_DIFFICULTY}/*.hpp)
file(GLOB_RECURSE HEADER_VIDEO ${HEADER_DIR_VIDEO}/*.hpp)

# set_target_properties(${PROJECT_NAME} PROPERTIES
#     RUNTIME_OUTPUT_DIRECTORY ${BUILD_DIR}
# )


add_executable(${PROJECT_NAME} ${MAIN} ${SOURCE}  ${HEADER})

target_include_directories(${PROJECT_NAME} PRIVATE
    ${HEADER_DIR} 
    ${HEADER_DIR_COMMAND}
    ${HEADER_DIR_INTERFACES} 
    ${HEADER_DIR_PARSER} 
    ${HEADER_DIR_INPUT_LOGIC}  
    ${HEADER_DIR_MENU}  
    ${HEADER_DIR_PLAYER_INTERACTIV_OBJ}  
    ${HEADER_DIR_SCORE_LOGIC}  
    ${HEADER_DIR_OPTIONS}  
    ${HEADER_DIR_DIFFICULTY} 
    ${HEADER_DIR_VIDEO}
    ${HEADER_DIR_MAIN}
)
    
# Add your library dependencies here
target_link_libraries(${PROJECT_NAME}
    pthread
    sfml-graphics
    sfml-window
    sfml-system
    sfml-audio
    boost_filesystem
)

